FIX : route에서 get에 body 제거 및 parmas 추가
